--- a/bottomnavigationviewtest/src/main/res/values/colors.xml
+++ b/bottomnavigationviewtest/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="tab_checked">#ED6A2C</color>
     <color name="tab_unchecked">#757575</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
