Add dot image on item

--- a/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_item_badge.xml
+++ b/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_item_badge.xml
@@ -9,9 +9,9 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="6dp"
-        android:background="@drawable/ic_circle_dot"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bottom_navigation_item_text_badge_background"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="10sp"
