--- a/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_dot_image_badge.xml
+++ b/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_dot_image_badge.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_msg_count"
+        android:id="@+id/badge_item_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
