--- a/bottomnavigationviewtest/src/main/res/drawable/bottom_navigation_item_dot_image_badge.xml
+++ b/bottomnavigationviewtest/src/main/res/drawable/bottom_navigation_item_dot_image_badge.xml
@@ -3,11 +3,11 @@
     android:shape="oval">
 
     <!--圆角-->
-    <corners android:radius="4dp" />
+    <corners android:radius="@dimen/design_bottom_navigation_badge_corners" />
 
     <size
-        android:width="8dp"
-        android:height="8dp" />
+        android:width="@dimen/design_bottom_navigation_badge_dot_image_width"
+        android:height="@dimen/design_bottom_navigation_badge_dot_image_height" />
 
     <!--填充-->
     <solid android:color="@color/colorAccent" />
