--- a/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_dot_image_badge.xml
+++ b/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_dot_image_badge.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -9,8 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="6dp"
         android:background="@drawable/bottom_navigation_item_dot_image_badge"
         android:gravity="center"
         android:textColor="@color/white"
