--- a/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_image_badge.xml
+++ b/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_image_badge.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/badge_item_view"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="32dp"
+        android:layout_height="16dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="6dp"
-        android:src="@mipmap/img_badge"
+        android:background="@mipmap/img_badge"
         android:gravity="center"
         android:visibility="gone" />
 
