--- a/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_text_badge.xml
+++ b/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_text_badge.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -9,8 +9,6 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/bottom_navigation_item_text_badge_background"
         android:gravity="center"
         android:textColor="@color/white"
