--- a/bottomnavigationviewtest/src/main/res/values/dimens.xml
+++ b/bottomnavigationviewtest/src/main/res/values/dimens.xml
@@ -3,5 +3,11 @@
     <dimen name="design_bottom_navigation_active_text_size">10sp</dimen>
     <dimen name="design_bottom_navigation_text_size">10sp</dimen>
 
+    <dimen name="design_bottom_navigation_badge_corners">4dp</dimen>
+    <dimen name="design_bottom_navigation_badge_dot_image_width">8dp</dimen>
+    <dimen name="design_bottom_navigation_badge_dot_image_height">8dp</dimen>
+    <dimen name="design_bottom_navigation_badge_text_width">16dp</dimen>
+    <dimen name="design_bottom_navigation_badge_text_height">16dp</dimen>
+
     <!--<dimen name="design_bottom_navigation_height">100dp</dimen>-->
 </resources>
