--- a/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_text_badge.xml
+++ b/bottomnavigationviewtest/src/main/res/layout/bottom_navigation_text_badge.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:id="@+id/badge_view"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/badge_item_view"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="wrap_content"
+        android:minHeight="@dimen/design_bottom_navigation_badge_text_height"
+        android:minWidth="@dimen/design_bottom_navigation_badge_text_width"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/bottom_navigation_item_text_badge_background"
         android:gravity="center"
