--- a/recyclerviewtest/src/main/res/layout/activity_recycler_view.xml
+++ b/recyclerviewtest/src/main/res/layout/activity_recycler_view.xml
@@ -13,13 +13,15 @@
             android:id="@+id/add_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="add"/>
+            android:text="add"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/del_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="delete"/>
+            android:text="delete"
+            android:visibility="gone"/>
 
     </LinearLayout>>
 
