--- a/recyclerviewtest/src/main/res/layout/item_view.xml
+++ b/recyclerviewtest/src/main/res/layout/item_view.xml
@@ -1,12 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp" />
+    <ImageView
+        android:id="@+id/item_icon"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginBottom="6dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/icon1" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/item_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RecyclerView使用教程示例"
+        android:layout_toRightOf="@id/item_icon"
+        android:textSize="18sp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="6dp"/>
+
+    <TextView
+        android:id="@+id/item_datetime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2019-03010 16:08:16"
+        android:layout_toRightOf="@id/item_icon"
+        android:layout_alignBottom="@id/item_icon"
+        android:layout_marginLeft="6dp"
+        android:layout_marginBottom="6dp"/>
+
+    <ImageView
+        android:id="@+id/item_bookmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/item_icon"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_toRightOf="@id/item_datetime"
+        android:scaleType="fitEnd"
+        android:src="@mipmap/unbookmark" />
+
+</RelativeLayout>
