--- a/recyclerviewtest/src/main/res/layout/activity_recycler_view.xml
+++ b/recyclerviewtest/src/main/res/layout/activity_recycler_view.xml
@@ -29,6 +29,7 @@
         android:id="@+id/my_recycler_view"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginRight="10dp"/>
 
 </LinearLayout>
