Impl jd like layout

--- a/recyclerviewtest3/src/main/res/layout/gird_item_view.xml
+++ b/recyclerviewtest3/src/main/res/layout/gird_item_view.xml
@@ -8,10 +8,11 @@
 
     <ImageView
         android:id="@+id/goods_pic"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
         android:scaleType="fitCenter"
         android:src="@mipmap/icon1" />
 
