--- a/recyclerviewtest3/src/main/res/layout/item_girl.xml
+++ b/recyclerviewtest3/src/main/res/layout/item_girl.xml
@@ -3,11 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/img_dongjiaxiaoyuan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:src="@mipmap/dongjiaxiaoyuan"/>
+
     <android.support.v7.widget.RecyclerView
         android:background="#f5f5f5"
         android:id="@+id/girl_rv_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15px"/>
+        android:layout_below="@id/img_dongjiaxiaoyuan"
+        android:layout_marginLeft="15px"
+        android:layout_marginRight="15px" />
 
 </RelativeLayout>
