--- a/recyclerviewtest3/src/main/res/values/colors.xml
+++ b/recyclerviewtest3/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="red">#ff0000</color>
     <color name="color3">#00ff00</color>
     <color name="grey">#f5f5f5</color>
+    <color name="dark_grey">#4e4e4e</color>
+    <color name="black">#000000</color>
+    <color name="orange">#ff6600</color>
 </resources>
